# otel-deamon

./: .gitignore  Cargo.toml  Readme.md  config-example.toml  config.yaml  renovate.json
.github/workflows/: release.yaml
src/: main.rs
