[package]
name = "otel-deamon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["native-tls-vendored"] }
md5 = "0.7.0"
base64 = "0.22.1"
toml = "0.8.19"
serde = {version="1.0.216", features = ["derive"]}
